Sections are split into files * Append git-ignore file

--- a/MaGrav_Power_Supply_Construction_Manual/main.tex
+++ b/MaGrav_Power_Supply_Construction_Manual/main.tex
@@ -278,67 +278,19 @@ a4paper,     %% defines the paper size: a4paper (default), a5paper, letterpaper,
 
 \input{introduction}
 \newpage
+\input{disclaimer}
+\input{required-components}
+\input{required-assembly-tools}
+\input{assembly}
+\input{support-resources}
 
-\section{Disclaimer}
-\label{sec:disclaimer}
 
-\section{Required components}
-\label{sec:required-components}
 
-\subsection{Global list of suppliers}
-\label{sec:global-list-of-suppliers}
 
-\begin{table}[h]
-\begin{center}
-    \begin{tabular}{ | l | l |} \hline
-    Component & Supplier \\ \hline
-    Bare Copper Wire, Bright, 14 AWG, 0.064" Diameter, 80' Length  &  
-    \href{http://www.amazon.com/Copper-Bright-0-064-Diameter-Length/dp/B000IJYRDE/ref=sr_1_15?ie=UTF8&qid=1446585445&sr=8-15&keywords=awg+14+copper}{Amazon}  \\ \hline
 
-    \end{tabular}
-    \caption{Global list of suppliers}
-	\label{table:global-list-suppliers}
-\end{center}
-\end{table}
 
-\section{Required assembly tools}
-\label{sec:required-assembly-tools}
 
-\subsection{Global list of vendors}
-\label{sec:global-list-of-vendors}
 
-\section{Assembly}
-\label{sec:assembly}
-
-\subsection{Coils}
-\label{sec:coils}
-
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=50mm]{images/counter_clock_wise_winding.jpg}
-  \caption[Counter-clock-wise (CCW) winding of a copper coil]{Counter-clock-wise (CCW) winding of a copper coil}
-  \label{fig:ccw}
-\end{figure}
-
-\subsection{Coils casings}
-\label{sec:coils-casings}
-
-\subsection{Coils hinges}
-\label{sec:coils-hinges}
-
-\subsection{Internal wiring}
-\label{sec:internal-wiring}
-
-\subsection{MaGrav shell}
-\label{sec:magrav-shell}
-
-\subsection{Box}
-\label{sec:box}
-
-\subsubsection{Wall socket}
-\label{sec:wall-socket}
-
-\section{Support resources}
 
 
 %\begin{figure}[bt]
