Updating reference.bib

--- a/MaGrav_Power_Supply_Construction_Manual/introduction.tex
+++ b/MaGrav_Power_Supply_Construction_Manual/introduction.tex
@@ -2,4 +2,5 @@
 \label{sec:introduction}
 
 
-This is a placeholder for the introduction.
+"God has been the creator of All,
+and Man converter of some." \cite{Keshe1}
