--- a/MaGrav_Power_Supply_Construction_Manual/main.tex
+++ b/MaGrav_Power_Supply_Construction_Manual/main.tex
@@ -315,10 +315,9 @@ a4paper,     %% defines the paper size: a4paper (default), a5paper, letterpaper,
 %%%
 %%% available styles: abbrv, acm, alpha, apalike, ieeetr, plain, siam, unsrt
 %%%
- \bibliographystyle{plain}
 
-%%% name of the bibliography file
  \bibliography{project.bib}
+ \bibliographystyle{ieeetr}
 
 \end{document}
 %%% }}}
