--- a/MaGrav_Power_Supply_Construction_Manual/project.bib
+++ b/MaGrav_Power_Supply_Construction_Manual/project.bib
@@ -2,7 +2,14 @@
   author = 	 {Mehran Tavakoli Keshe},
   title = 	 {The origin of the universe},
   publisher = 	 {Keshe Foundation},
-  year = 	 {},
+  year = 	 {2011},
   isbn = {978-94-6087-000-2}
 }
 
+@Book{Keshe1,
+  author = 	 {Mehran Tavakoli Keshe},
+  title = 	 {The Universal Order of Creation of Matters},
+  publisher = 	 {Keshe Foundation},
+  year = 	 {2009},
+  isbn = {978-94-6087-000-6}
+}
