References now get shown in a own page.

--- a/MaGrav_Power_Supply_Construction_Manual/main.tex
+++ b/MaGrav_Power_Supply_Construction_Manual/main.tex
@@ -306,7 +306,7 @@ a4paper,     %% defines the paper size: a4paper (default), a5paper, letterpaper,
 %%% end main document
 %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+ \newpage
  \appendix  %% include it, if something (bibliography, index, ...) follows below
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
